update lwjgl