@@ -1,8 +1,12 @@
 plugins {
     id 'java'
     id 'application'
-    id "io.freefair.lombok" version "8.4"
+    id 'io.freefair.lombok' version '8.4'
 }
+
+project.ext.lwjglVersion = '3.3.3'
+project.ext.jomlVersion = '1.10.5'
+project.ext.lwjglNatives = 'natives-windows'
 
 repositories {
     mavenCentral()
@@ -13,18 +17,19 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
     // LWJGL dependencies
-    implementation 'org.lwjgl:lwjgl:3.3.2'
-    implementation 'org.lwjgl:lwjgl-glfw:3.3.2'
-    implementation 'org.lwjgl:lwjgl-opengl:3.3.2'
-    implementation 'org.lwjgl:lwjgl-stb:3.3.2'
+    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
-    runtimeOnly 'org.lwjgl:lwjgl:3.3.2:natives-windows'
-    runtimeOnly 'org.lwjgl:lwjgl-glfw:3.3.2:natives-windows'
-    runtimeOnly 'org.lwjgl:lwjgl-opengl:3.3.2:natives-windows'
-    runtimeOnly 'org.lwjgl:lwjgl-stb:3.3.2:natives-windows'
-    
-    // JOML dependency
-    implementation 'org.joml:joml:1.10.5'
+    implementation 'org.lwjgl:lwjgl'
+    implementation 'org.lwjgl:lwjgl-assimp'
+    implementation 'org.lwjgl:lwjgl-glfw'
+    implementation 'org.lwjgl:lwjgl-opengl'
+    implementation 'org.lwjgl:lwjgl-stb'
+    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
+    implementation "org.joml:joml:${jomlVersion}"
 
     // JSON
     implementation group: 'org.json', name: 'json', version: '20240205'
@@ -56,7 +61,6 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.run {
-    jvmArgs += '--enable-preview'
     // Specify the classpath for running the application
     classpath = sourceSets.main.runtimeClasspath
 }
